# ddsimca-py

./: README.md  pyproject.toml
ddsimca/: __init__.py  ddsimca.py
demo/: All_Test.csv  New_Susp.csv  NonTarget_Non_Or.csv  Target_Greece.csv  Target_Test.csv  Target_Train.csv  demo.ipynb  demo.md
tests/: test_ddsimca.py
